--- a/RyzBank/presentation/src/main/res/values/strings.xml
+++ b/RyzBank/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">app</string>
+
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <string name="try_again">Try Again</string>
+    <string name="no_internet_connection">Нет подключения к интернету</string>
 </resources>
