--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="profile">Profile</string>
     <string name="try_again">Try Again</string>
     <string name="no_internet_connection">Нет подключения к интернету</string>
+
+    <string name="on_boarding_next_action">Давно этого ждал!</string>
+    <string name="on_boarding_next_want">Хочу попробовать!</string>
 </resources>
