--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -12,4 +12,12 @@
     <string name="continue_now">Continue Now</string>
     <string name="not_have_account">Don’t have account?</string>
     <string name="create_now">Create now?</string>
+    <string name="facebook">Facebook</string>
+    <string name="google">Google</string>
+    <string name="or_continue">Or continue with</string>
+    <string name="log_in">Log In</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="login">Login</string>
+    <string name="forgot">Forgot?</string>
 </resources>
