--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -16,8 +16,12 @@
     <string name="google">Google</string>
     <string name="or_continue">Or continue with</string>
     <string name="log_in">Log In</string>
+    <string name="sign_in">Sign In</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="login">Login</string>
     <string name="forgot">Forgot?</string>
+    <string name="empty"></string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
