--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">app</string>
 
     <string name="home">Home</string>
+    <string name="outlay">Outlay</string>
+    <string name="goal">Goal</string>
     <string name="profile">Profile</string>
     <string name="try_again">Try Again</string>
     <string name="no_internet_connection">No internet connection</string>
