add history transaction on home screen

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="create_now">Create now?</string>
     <string name="facebook">Facebook</string>
     <string name="google">Google</string>
+    <string name="welcome_back">Welcome Back</string>
     <string name="or_continue">Or continue with</string>
     <string name="log_in">Log In</string>
     <string name="sign_in">Sign In</string>
